Disable the home launcher animation when tab-dragging starts/ends.

Also disable other windows hide/show animation when tab-dragging process
starts/ends.

Bug: 888173
Change-Id: Iee22d20832cefd61ad7ebdea30b5a65e75b9f204
Reviewed-on: https://chromium-review.googlesource.com/c/1282162
Commit-Queue: Xiaoqian Dai <xdai@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#600552}